--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,10 @@
             <version>4.12</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
