--- a/src/main/resources/jedis.properties
+++ b/src/main/resources/jedis.properties
@@ -1,14 +1,14 @@
-#最大分配的对象数
+#\u00e6\u009c\u0080\u00e5\u00a4\u00a7\u00e5\u0088\u0086\u00e9\u0085\u008d\u00e7\u009a\u0084\u00e5\u00af\u00b9\u00e8\u00b1\u00a1\u00e6\u0095\u00b0
 redis.pool.maxActive=1024
-#最大能够保持idel状态的对象数
+#\u00e6\u009c\u0080\u00e5\u00a4\u00a7\u00e8\u0083\u00bd\u00e5\u00a4\u009f\u00e4\u00bf\u009d\u00e6\u008c\u0081idel\u00e7\u008a\u00b6\u00e6\u0080\u0081\u00e7\u009a\u0084\u00e5\u00af\u00b9\u00e8\u00b1\u00a1\u00e6\u0095\u00b0
 redis.pool.maxIdle=200
-#当池内没有返回对象时，最大等待时间
+#\u00e5\u00bd\u0093\u00e6\u00b1\u00a0\u00e5\u0086\u0085\u00e6\u00b2\u00a1\u00e6\u009c\u0089\u00e8\u00bf\u0094\u00e5\u009b\u009e\u00e5\u00af\u00b9\u00e8\u00b1\u00a1\u00e6\u0097\u00b6\u00ef\u00bc\u008c\u00e6\u009c\u0080\u00e5\u00a4\u00a7\u00e7\u00ad\u0089\u00e5\u00be\u0085\u00e6\u0097\u00b6\u00e9\u0097\u00b4
 redis.pool.maxWait=1000
-#当调用borrow Object方法时，是否进行有效性检查
+#\u00e5\u00bd\u0093\u00e8\u00b0\u0083\u00e7\u0094\u00a8borrow Object\u00e6\u0096\u00b9\u00e6\u00b3\u0095\u00e6\u0097\u00b6\u00ef\u00bc\u008c\u00e6\u0098\u00af\u00e5\u0090\u00a6\u00e8\u00bf\u009b\u00e8\u00a1\u008c\u00e6\u009c\u0089\u00e6\u0095\u0088\u00e6\u0080\u00a7\u00e6\u00a3\u0080\u00e6\u009f\u00a5
 redis.pool.testOnBorrow=true
-#当调用return Object方法时，是否进行有效性检查
+#\u00e5\u00bd\u0093\u00e8\u00b0\u0083\u00e7\u0094\u00a8return Object\u00e6\u0096\u00b9\u00e6\u00b3\u0095\u00e6\u0097\u00b6\u00ef\u00bc\u008c\u00e6\u0098\u00af\u00e5\u0090\u00a6\u00e8\u00bf\u009b\u00e8\u00a1\u008c\u00e6\u009c\u0089\u00e6\u0095\u0088\u00e6\u0080\u00a7\u00e6\u00a3\u0080\u00e6\u009f\u00a5
 redis.pool.testOnReturn=true
 #IP
-redis.ip=127.0.0.1
+redis.ip=35.165.62.247
 #Port
 redis.port=6379
